Updated ControlSystem to allow for multiple control schemes and MUCH cleaner code.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -30,33 +30,53 @@ interact.failure.vehicleowned=This vehicle is locked!
 interact.failure.propellertoobig=This propeller is too big for this engine!
 interact.failure.propellerbenchworking=This propeller bench is currently busy.
 
-input.key.mod=Mod
-input.key.camlock=CamLock
-input.key.pitchu=PitchUp
-input.key.pitchd=PitchDown
-input.key.rollr=RollRight
-input.key.rolll=RollLeft
-input.key.yawr=YawRight
-input.key.yawl=YawLeft
-input.key.throttleu=ThrottleUp
-input.key.throttled=ThrottleDown
-input.key.flapsu=FlapsUp
-input.key.flapsd=FlapsDown
-input.key.brake=Brake
-input.key.panel=Panel
-input.key.zoomi=ZoomIn
-input.key.zoomo=ZoomOut
+input.aircraft.mod=Mod
+input.aircraft.camlock=CamLock
+input.aircraft.pitch=Pitch
+input.aircraft.pitch_u=PitchUp
+input.aircraft.pitch_d=PitchDown
+input.aircraft.roll=Roll
+input.aircraft.roll_r=RollRight
+input.aircraft.roll_l=RollLeft
+input.aircraft.yaw=Yaw
+input.aircraft.yaw_r=YawRight
+input.aircraft.yaw_l=YawLeft
+input.aircraft.throttle=Throttle
+input.aircraft.throttle_u=ThrottleUp
+input.aircraft.throttle_d=ThrottleDown
+input.aircraft.flaps_u=FlapsUp
+input.aircraft.flaps_d=FlapsDown
+input.aircraft.brake=Brake
+input.aircraft.panel=Panel
+input.aircraft.zoom_i=ZoomIn
+input.aircraft.zoom_o=ZoomOut
+input.aircraft.park=ParkingBrake
+input.aircraft.changeview=ChangeView
+input.aircraft.look_l=LookLeft
+input.aircraft.look_r=LookRight
+input.aircraft.look_u=LookUp
+input.aircraft.look_d=LookDown
+input.aircraft.look_a=LookDirectional
 
-input.joystick.pitch=Pitch
-input.joystick.roll=Roll
-input.joystick.yaw=Yaw
-input.joystick.throttle=Throttle
-input.joystick.changeview=ChangeView
-input.joystick.lookl=LookLeft
-input.joystick.lookr=LookRight
-input.joystick.looku=LookUp
-input.joystick.lookd=LookDown
-input.joystick.looka=LookDirectional
+input.car.mod=Mod
+input.car.camlock=CamLock
+input.car.turn=Turn
+input.car.turn_r=TurnRight
+input.car.turn_l=TurnLeft
+input.car.gas=Gas
+input.car.brake=Brake
+input.car.start=StartEngine
+input.car.horn=Horn
+input.car.lights=Lights
+input.car.zoom_i=ZoomIn
+input.car.zoom_o=ZoomOut
+input.car.park=ParkingBrake
+input.car.changeview=ChangeView
+input.car.look_l=LookLeft
+input.car.look_r=LookRight
+input.car.look_u=LookUp
+input.car.look_d=LookDown
+input.car.look_a=LookDirectional
 
 gui.panel.navigationlights=NAV
 gui.panel.strobelights=STROBE
@@ -75,7 +95,7 @@ gui.instruments.fault=This instrument cannot go here!
 gui.config.title.config=CONFIG
 gui.config.title.plane=PLANE
 gui.config.title.heli=HELI
-gui.config.title.vehicle=CAR
+gui.config.title.car=CAR
 gui.config.title.joystick=JOYSTICK
 gui.config.joystick.confirm=Confirm
 gui.config.joystick.cancel=Cancel
