--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -92,12 +92,15 @@ gui.instruments.idle=Select an instrument.
 gui.instruments.decide=Click an instrument to add, or CLEAR to remove.
 gui.instruments.fault=This instrument cannot go here!
 
-gui.config.title.config=CONFIG
-gui.config.title.plane=PLANE
-gui.config.title.heli=HELI
-gui.config.title.car=CAR
-gui.config.title.joystick=JOYSTICK
-gui.config.joystick.confirm=Confirm
+gui.config.header.config=CONFIG
+gui.config.header.controls=CONTROLS
+gui.config.controls.title=Chose a configuration to change:
+gui.config.controls.aircraft.keyboard=AIRCRAFT KEYBOARD
+gui.config.controls.aircraft.joystick=AIRCRAFT JOYSTICK
+gui.config.controls.car.keyboard=CAR KEYBOARD
+gui.config.controls.car.joystick=CAR JOYSTICK
+gui.config.controls.confirm=Confirm
+
 gui.config.joystick.cancel=Cancel
 gui.config.joystick.clear=Clear Assignment
 gui.config.joystick.axismode=Axis mode: 
