Finished overhaul of control system.  Things work way better now.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -100,12 +100,6 @@ gui.config.controls.aircraft.joystick=AIRCRAFT JOYSTICK
 gui.config.controls.car.keyboard=CAR KEYBOARD
 gui.config.controls.car.joystick=CAR JOYSTICK
 gui.config.controls.confirm=Confirm
-
-gui.config.joystick.cancel=Cancel
-gui.config.joystick.clear=Clear Assignment
-gui.config.joystick.axismode=Axis mode: 
-gui.config.joystick.normal=Normal
-gui.config.joystick.invert=Inverted
 gui.config.joystick.select=Choose a joystick:
 gui.config.joystick.name=Name:
 gui.config.joystick.type=Type:
@@ -113,11 +107,17 @@ gui.config.joystick.mapping=Mapping
 gui.config.joystick.deadzone=Dead-zone:
 gui.config.joystick.state=State:
 gui.config.joystick.assignment=Assigned to:
+gui.config.joystick.cancel=Cancel
+gui.config.joystick.clear=Clear Assignment
 gui.config.joystick.choosemap=Choose what gets mapped to this button.
 gui.config.joystick.selectdigital=This DIGITAL button can control:
 gui.config.joystick.selectanalog=This ANALOG button can control:
 gui.config.joystick.calibrate1=Move the axis until the numbers stop changing.
 gui.config.joystick.calibrate2=Then hit confirm to save settings.
+gui.config.joystick.axismode=Axis mode: 
+gui.config.joystick.normal=Normal
+gui.config.joystick.invert=Inverted
+gui.config.joystick.confirm=Confirm
 
 info.item.propeller.numberBlades=Blades: 
 info.item.propeller.pitch=Pitch: 
