Tweaked control system by adding more controls and options.  Editied GUI to match.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -32,15 +32,15 @@ interact.failure.propellerbenchworking=This propeller bench is currently busy.
 
 input.aircraft.mod=Mod
 input.aircraft.camlock=CamLock
+input.aircraft.yaw=Yaw
+input.aircraft.yaw_r=YawRight
+input.aircraft.yaw_l=YawLeft
 input.aircraft.pitch=Pitch
 input.aircraft.pitch_u=PitchUp
 input.aircraft.pitch_d=PitchDown
 input.aircraft.roll=Roll
 input.aircraft.roll_r=RollRight
 input.aircraft.roll_l=RollLeft
-input.aircraft.yaw=Yaw
-input.aircraft.yaw_r=YawRight
-input.aircraft.yaw_l=YawLeft
 input.aircraft.throttle=Throttle
 input.aircraft.throttle_u=ThrottleUp
 input.aircraft.throttle_d=ThrottleDown
@@ -48,15 +48,22 @@ input.aircraft.flaps_u=FlapsUp
 input.aircraft.flaps_d=FlapsDown
 input.aircraft.brake=Brake
 input.aircraft.panel=Panel
+input.aircraft.park=ParkingBrake
 input.aircraft.zoom_i=ZoomIn
 input.aircraft.zoom_o=ZoomOut
-input.aircraft.park=ParkingBrake
 input.aircraft.changeview=ChangeView
 input.aircraft.look_l=LookLeft
 input.aircraft.look_r=LookRight
 input.aircraft.look_u=LookUp
 input.aircraft.look_d=LookDown
 input.aircraft.look_a=LookDirectional
+input.aircraft.changehud=HUDMode
+input.aircraft.trim_yaw_r=TrimYawRight
+input.aircraft.trim_yaw_l=TrimYawLeft
+input.aircraft.trim_pitch_u=TrimPitchUp
+input.aircraft.trim_pitch_d=TrimPitchDown
+input.aircraft.trim_roll_r=TrimRollRight
+input.aircraft.trim_roll_l=TrimRollLeft
 
 input.car.mod=Mod
 input.car.camlock=CamLock
@@ -68,15 +75,17 @@ input.car.brake=Brake
 input.car.start=StartEngine
 input.car.horn=Horn
 input.car.lights=Lights
+input.car.park=ParkingBrake
 input.car.zoom_i=ZoomIn
 input.car.zoom_o=ZoomOut
-input.car.park=ParkingBrake
 input.car.changeview=ChangeView
 input.car.look_l=LookLeft
 input.car.look_r=LookRight
 input.car.look_u=LookUp
 input.car.look_d=LookDown
 input.car.look_a=LookDirectional
+input.car.changehud=HUDMode
+input.car.stop=StopEngine
 
 gui.panel.navigationlights=NAV
 gui.panel.strobelights=STROBE
