Finalized car physics.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -72,6 +72,8 @@ input.car.turn_r=TurnRight
 input.car.turn_l=TurnLeft
 input.car.gas=Gas
 input.car.brake=Brake
+input.car.shift_u=ShiftUp
+input.car.shift_d=ShiftDown
 input.car.start=StartEngine
 input.car.horn=Horn
 input.car.lights=Lights
