--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -116,6 +116,7 @@ gui.config.controls.aircraft.joystick=AIRCRAFT JOYSTICK
 gui.config.controls.car.keyboard=CAR KEYBOARD
 gui.config.controls.car.joystick=CAR JOYSTICK
 gui.config.controls.confirm=Confirm
+gui.config.joystick.error=ERROR: MTS could not initialize the control system!  This is likely due to a device mis-representing itself as a joystick to Java.  Mice have been known to have this issue, especially Corsair mice, so try a different mouse.  If the issue persists please contact the mod author.
 gui.config.joystick.select=Choose a joystick:
 gui.config.joystick.name=Name:
 gui.config.joystick.type=Type:
