Added larger wheel with icon and crafting.  Moved child height and width parameters out of constructors and into abstract methods to reduce constructor parameters.  Cores still use NBT for storage on construction, but will change this to allow for NBT-less collision and updatable collision boxes.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -162,6 +162,7 @@ item.seat.name=Seat
 item.skid.name=Skid
 item.pontoon.name=Pontoon
 item.wheelsmall.name=Small Wheel
+item.wheelmedium.name=Medium Wheel
 item.wheellarge.name=Large Wheel
 item.propeller_wood.name=Wooden Propeller
 item.propeller_iron.name=Iron Propeller
