--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -31,7 +31,7 @@ interact.fuelpump.toofar=The fuel pump is too far away from the vehicle.  The pu
  
 interact.failure.seattaken=This seat is taken!
 interact.failure.vehiclelocked=This vehicle is locked!
-interact.failure.vehicleowned=This vehicle is locked!
+interact.failure.vehicleowned=You are not the owner of this vehicle and therefore cannot remove it or its parts!
 interact.failure.propellertoobig=This propeller is too big for this engine!
 interact.failure.propellerbenchworking=This propeller bench is currently busy.
 
