Changed engine system to have real names.  Removed some sub-classes while we were at it.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -141,6 +141,9 @@ info.item.propeller.pitch=Pitch:
 info.item.propeller.diameter=Diameter: 
 info.item.propeller.maxrpm=Max RPM: 
 info.item.propeller.health=Health: 
+info.item.engine.automatic=Transmission: Automatic
+info.item.engine.manual=Transmission: Manual
+info.item.engine.numbergears=Number gears: 
 info.item.engine.maxrpm=Max Possible RPM: 
 info.item.engine.maxsaferpm=Max safe RPM: 
 info.item.engine.fuelconsumption=Fuel consumption (mb/t):
@@ -167,9 +170,10 @@ item.wheellarge.name=Large Wheel
 item.propeller_wood.name=Wooden Propeller
 item.propeller_iron.name=Iron Propeller
 item.propeller_obsidian.name=Obsidian Propeller
-item.engineaircraftsmall.name=Small Airplane Engine
-item.engineaircraftlarge.name=Large Airplane Engine
-item.enginecarsmall.name=Small Automotive Engine
+item.enginelycoming0360.name=Lycoming O-360 Aircraft Engine
+item.enginewaspr1340.name=Wasp R-1340 Aircraft Engine
+item.engineamci4_a.name=AMC Inline 4 Car Engine
+item.engineamci4_m.name=AMC Inline 4 Car Engine
 
 item.wrench.name=Wrench
 item.key.name=Key
