--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -170,7 +170,7 @@ item.wheellarge.name=Large Wheel
 item.propeller_wood.name=Wooden Propeller
 item.propeller_iron.name=Iron Propeller
 item.propeller_obsidian.name=Obsidian Propeller
-item.enginelycoming0360.name=Lycoming O-360 Aircraft Engine
+item.enginebristolmercury.name=Bristol Mercury Aircraft Engine
 item.enginewaspr1340.name=Wasp R-1340 Aircraft Engine
 item.engineamci4_a.name=AMC Inline 4 Car Engine
 item.engineamci4_m.name=AMC Inline 4 Car Engine
