--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -21,7 +21,7 @@ interact.key.info.own=You are now the owner of this vehicle!
 interact.key.info.unown=This vehicle is now no longer owned!
 interact.key.failure.notowner=Only the owner of this vehicle may make new keys!
 interact.key.failure.wrongkey=This key does not go to this vehicle!
-interact.key.failure.alreadyowned=is the owner of this vehicle, you cannot change ownership!
+interact.key.failure.alreadyowned=You are not the owner of this vehicle, you cannot change ownership!
 
 interact.fuelpump.connect=Fuel pump connected and pumping.
 interact.fuelpump.complete=Vehicle is full, disconnecting.
