--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -232,7 +232,8 @@ tile.fuelpump.name=Fuel Pump
 tile.fuelpump.level=LVL:
 tile.fuelpump.dispensed=DISP:
 
-itemGroup.tabMTS=Minecraft Transport Simulator
+itemGroup.tabMTSVehicles=MTS Vehicles
+itemGroup.tabMTSParts=MTS Parts
 key.categories.mts=Minecraft Transport Simulator
 key.config=Open configuration screen
 
