Removed chests and added crates.  Much more stack-able and not hooked to Vanilla code.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -179,6 +179,7 @@ item.pontoon.name=Pontoon
 item.wheelsmall.name=Small Wheel
 item.wheelmedium.name=Medium Wheel
 item.wheellarge.name=Large Wheel
+item.crate.name=Crate
 item.propeller_wood.name=Wooden Propeller
 item.propeller_iron.name=Iron Propeller
 item.propeller_obsidian.name=Obsidian Propeller
@@ -225,8 +226,8 @@ item.instrument_aircraft_enginetemp.description=Indicates engine temperature.
 item.instrument_aircraft_oilpressure.name=Oil Pressure Gauge
 item.instrument_aircraft_oilpressure.description=Indicates oil pressure.
 
-entity.mts.vehiclechest.name=Chest
-entity.vehiclechest.name=Chest
+entity.mts.crate.name=Crate
+entity.crate.name=Crate
 tile.propellerbench.name=Propeller Bench
 tile.fuelpump.name=Fuel Pump
 tile.fuelpump.level=LVL:
