--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -235,8 +235,7 @@ tile.fuelpump.name=Fuel Pump
 tile.fuelpump.level=LVL:
 tile.fuelpump.dispensed=DISP:
 
-itemGroup.tabMTSVehicles=MTS Vehicles
-itemGroup.tabMTSParts=MTS Parts
+itemGroup.tabMTSCore=MTS Core Components
 key.categories.mts=Minecraft Transport Simulator
 key.config=Open configuration screen
 
