--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -37,7 +37,6 @@ interact.fuelpump.toofar=The fuel pump is too far away from the vehicle.  The pu
 interact.failure.seattaken=This seat is taken!
 interact.failure.vehiclelocked=This vehicle is locked!
 interact.failure.vehicleowned=You are not the owner of this vehicle and therefore cannot remove it or its parts!
-interact.failure.propellertoobig=This propeller may be too big for this engine...
 interact.failure.propellerbenchworking=This propeller bench is currently busy.
 
 input.aircraft.mod=Mod
@@ -158,6 +157,7 @@ info.item.propeller.health=Health:
 info.item.engine.automatic=Transmission: Automatic
 info.item.engine.manual=Transmission: Manual
 info.item.engine.numbergears=Number gears: 
+info.item.engine.gearratios=Gear ratios: 
 info.item.engine.maxrpm=Max Possible RPM: 
 info.item.engine.maxsaferpm=Max safe RPM: 
 info.item.engine.fuelconsumption=Fuel consumption (mb/t):
@@ -228,8 +228,6 @@ item.instrument_aircraft_enginetemp.description=Indicates engine temperature.
 item.instrument_aircraft_oilpressure.name=Oil Pressure Gauge
 item.instrument_aircraft_oilpressure.description=Indicates oil pressure.
 
-entity.mts.crate.name=Crate
-entity.crate.name=Crate
 tile.propellerbench.name=Propeller Bench
 tile.fuelpump.name=Fuel Pump
 tile.fuelpump.level=LVL:
