--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -143,11 +143,11 @@ gui.config.joystick.invert=Inverted
 gui.config.joystick.confirm=Confirm
 
 gui.packmissing.title=!WARNING!
-gui.packmissing.reason=MTS has detected that it has been started without a content pack.  This will result in NO vehicles being present!  If you are having trouble installing the pack please try the following:
-gui.packmissing.nomod=If you do NOT have a content pack yet installed, please see the Curse page for this mod for a link to one.
-gui.packmissing.misplaced=If you DID download a pack ensure that it is the same place as all your other mods.  It should NOT be in the mts folder as that's for internal use only!
+gui.packmissing.reason=MTS has detected that it has been started without a content pack.  This will result in NO vehicles being present!
+gui.packmissing.nomod=If you do NOT have a content pack yet installed, please see the Curse page for this mod (located below) for a link to one.
+gui.packmissing.modlink=https://minecraft.curseforge.com/projects/minecraft-transport-simulator
+gui.packmissing.misplaced=If you DID download a pack ensure that it is the same place as all your other mods.  It should NOT be in the mts folder, in fact that folder can be deleted as it's no longer used for packs.
 gui.packmissing.versionerror=If the pack is in that location, and you are still seeing this message, ensure you are running the correct pack version.  Older packs don't have a version-checker built in and will just fail to load with current versions of MTS.
-gui.packmissing.checklogs=If all those fail, please check you log files.  MTS outputs what it is doing to those files and will provide helpful data for issues like this.
 
 info.item.propeller.numberBlades=Blades: 
 info.item.propeller.pitch=Pitch: 
