--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -233,6 +233,10 @@ tile.fuelpump.name=Fuel Pump
 tile.fuelpump.level=LVL:
 tile.fuelpump.dispensed=DISP:
 
+tile.pole.name=Pole
+tile.polebase.name=Pole Base
+tile.trafficcone.name=Traffic Cone
+
 itemGroup.tabMTSCore=MTS Core Components
 key.categories.mts=Minecraft Transport Simulator
 key.config=Open configuration screen
