--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -236,6 +236,7 @@ tile.fuelpump.dispensed=DISP:
 tile.pole.name=Pole
 tile.polebase.name=Pole Base
 tile.trafficcone.name=Traffic Cone
+tile.crashbarrier.name=Crash Barrier
 
 itemGroup.tabMTSCore=MTS Core Components
 key.categories.mts=Minecraft Transport Simulator
