Added traffic signal.  Uses NBT, but since we'll end up using TESRs for lights this may or may not be an issue.  Still not sure how I want to link them...

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -237,6 +237,7 @@ tile.pole.name=Pole
 tile.polebase.name=Pole Base
 tile.trafficcone.name=Traffic Cone
 tile.crashbarrier.name=Crash Barrier
+tile.trafficsignal.name=Traffic Signal
 
 itemGroup.tabMTSCore=MTS Core Components
 key.categories.mts=Minecraft Transport Simulator
