Created part bench GUI and updated packets to work with new crafting systems.  Removed animation for propeller part bench and looping sound.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -37,7 +37,6 @@ interact.fuelpump.toofar=The fuel pump is too far away from the vehicle.  The pu
 interact.failure.seattaken=This seat is taken!
 interact.failure.vehiclelocked=This vehicle is locked!
 interact.failure.vehicleowned=You are not the owner of this vehicle and therefore cannot remove it or its parts!
-interact.failure.propellerbenchworking=This propeller bench is currently busy.
 interact.failure.missingpart=This part needs to be connected to another part and cannot go on here yet.
 
 input.aircraft.mod=Mod
@@ -150,23 +149,31 @@ gui.packmissing.modlink=https://minecraft.curseforge.com/projects/minecraft-tran
 gui.packmissing.misplaced=If you DID download a pack ensure that it is the same place as all your other mods.  It should NOT be in the mts folder, in fact that folder can be deleted as it's no longer used for packs.
 gui.packmissing.versionerror=If the pack is in that location, and you are still seeing this message, ensure you are running the correct pack version.  Older packs don't have a version-checker built in and will just fail to load with current versions of MTS.
 
-info.item.propeller.numberBlades=Blades: 
-info.item.propeller.pitch=Pitch: 
-info.item.propeller.diameter=Diameter: 
-info.item.propeller.maxrpm=Max RPM: 
-info.item.propeller.health=Health: 
 info.item.engine.automatic=Transmission: Automatic
 info.item.engine.manual=Transmission: Manual
 info.item.engine.numbergears=Number gears: 
 info.item.engine.gearratios=Gear ratios: 
 info.item.engine.maxrpm=Max Possible RPM: 
 info.item.engine.maxsaferpm=Max safe RPM: 
-info.item.engine.fuelconsumption=Fuel consumption (mb/t):
+info.item.engine.fuelconsumption=Fuel use (mb/t): 
 info.item.engine.hours=Runtime hours: 
 info.item.engine.oilleak=Has an oil leak!
 info.item.engine.fuelleak=Has a fuel leak!
 info.item.engine.brokenstarter=Electric starter is broken!
 info.item.engine.creative=Creative: Uses no fuel
+info.item.ground_device.diameter=Climb height: 
+info.item.ground_device.motivefriction=Power friction: 
+info.item.ground_device.lateralfriction=Turning friction: 
+info.item.ground_device.rotatesonshaft_true=Is a wheel 
+info.item.ground_device.rotatesonshaft_false=Is NOT a wheel
+info.item.ground_device.canfloat_true=Floats
+info.item.ground_device.canfloat_false=Does not float
+info.item.propeller.numberBlades=Blades: 
+info.item.propeller.pitch=Pitch: 
+info.item.propeller.diameter=Diameter: 
+info.item.propeller.maxrpm=Max RPM: 
+info.item.propeller.health=Health: 
+
 info.item.wrench.use=Use on vehicle to change instruments.
 info.item.wrench.attack=Attack a part to remove.
 info.item.wrench.sneakattack=Sneak-attack to remove vehicle.
