--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -197,6 +197,7 @@ tile.polebase.name=Pole Base
 tile.trafficcone.name=Traffic Cone
 tile.crashbarrier.name=Crash Barrier
 tile.trafficsignal.name=Traffic Signal
+tile.streetlight.name=Street Light
 
 itemGroup.tabMTSCore=MTS Core Components
 key.categories.mts=Minecraft Transport Simulator
