--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -198,6 +198,8 @@ item.manual.name=MTS Manual (READ ME!)
 tile.draftingtable.name=Drafting Table
 tile.propellerbench.name=Propeller Bench
 tile.enginehoist.name=Engine Hoist
+tile.wheelworkbench.name=Wheel Workbench
+
 tile.fuelpump.name=Fuel Pump
 tile.fuelpump.level=LVL:
 tile.fuelpump.dispensed=DISP:
