Added seat crafting bench.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -198,6 +198,7 @@ tile.vehiclebench.name=Drafting Table
 tile.propellerbench.name=Propeller Bench
 tile.enginebench.name=Engine Hoist
 tile.wheelbench.name=Wheel Workbench
+tile.seatbench.name=Table Saw
 tile.instrumentbench.name=Instrument Bench
 
 tile.fuelpump.name=Fuel Pump
