--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -175,6 +175,8 @@ info.item.ground_device.rotatesonshaft_true=Is a wheel
 info.item.ground_device.rotatesonshaft_false=Is NOT a wheel
 info.item.ground_device.canfloat_true=Floats
 info.item.ground_device.canfloat_false=Does not float
+info.item.propeller.staticPitch=Static Pitch
+info.item.propeller.dynamicPitch=Dynamic Pitch
 info.item.propeller.numberBlades=Blades: 
 info.item.propeller.pitch=Pitch: 
 info.item.propeller.diameter=Diameter: 
