Split emergency lights and sirens into individual keybinds.  Allows for lights to be turned on independent of sirens.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -87,6 +87,7 @@ input.car.start=StartEngine
 input.car.horn=Horn
 input.car.siren=Siren
 input.car.lights=Lights
+input.car.lights_special=SpecialLights
 input.car.park=ParkingBrake
 input.car.zoom_i=ZoomIn
 input.car.zoom_o=ZoomOut
