--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -216,19 +216,19 @@ item.wrench.name=Wrench
 item.key.name=Key
 item.manual.name=MTS Manual (READ ME!)
 
-tile.vehiclebench.name=Drafting Table
-tile.propellerbench.name=Propeller Bench
-tile.enginebench.name=Engine Hoist
-tile.wheelbench.name=Wheel Workbench
-tile.seatbench.name=Table Saw
-tile.custombench.name=Tool Bench
-tile.instrumentbench.name=Instrument Bench
+item.vehiclebench.name=Drafting Table
+item.propellerbench.name=Propeller Bench
+item.enginebench.name=Engine Hoist
+item.wheelbench.name=Wheel Workbench
+item.seatbench.name=Table Saw
+item.custombench.name=Tool Bench
+item.instrumentbench.name=Instrument Bench
 
-tile.fuelpump.name=Fuel Pump
-tile.fuelpump.level=LVL:
-tile.fuelpump.dispensed=DISP:
+item.fuelpump.name=Fuel Pump
+item.fuelpump.level=LVL:
+item.fuelpump.dispensed=DISP:
 
-tile.trafficsignalcontroller.name=Traffic Signal Controller
+item.trafficsignalcontroller.name=Traffic Signal Controller
 
 tile.pole.name=Pole
 tile.polebase.name=Pole Base
