Added guns N bullets!

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -57,6 +57,7 @@ input.aircraft.flaps_d=FlapsDown
 input.aircraft.brake=Brake
 input.aircraft.panel=Panel
 input.aircraft.park=ParkingBrake
+input.aircraft.gun=Gun
 input.aircraft.zoom_i=ZoomIn
 input.aircraft.zoom_o=ZoomOut
 input.aircraft.changeview=ChangeView
@@ -89,6 +90,7 @@ input.car.siren=Siren
 input.car.lights=Lights
 input.car.lights_special=SpecialLights
 input.car.park=ParkingBrake
+input.car.gun=Gun
 input.car.zoom_i=ZoomIn
 input.car.zoom_o=ZoomOut
 input.car.changeview=ChangeView
@@ -202,6 +204,20 @@ info.item.propeller.pitch=Pitch:
 info.item.propeller.diameter=Diameter: 
 info.item.propeller.maxrpm=Max RPM: 
 info.item.propeller.health=Health: 
+info.item.gun.type.fixed=Type: Fixed-Mount Gun 
+info.item.gun.diameter=Diameter (mm): 
+info.item.gun.length=Length (mm): 
+info.item.gun.fireDelay=Fire Delay (ticks): 
+info.item.gun.muzzleVelocity=Velocity (blk/s): 
+info.item.gun.capacity=Bullet Capacity: 
+info.item.gun.yawRange=Yaw Range: 
+info.item.gun.pitchRange=Pitch Range: 
+info.item.bullet.type.normal=Normal Bullet
+info.item.bullet.type.explosive=Explosive Bullet
+info.item.bullet.type.incendiary=Incendiary Bullet
+info.item.bullet.type.armor_piercing=Armor Piercing Bullet
+info.item.bullet.diameter=Diameter (mm): 
+info.item.bullet.quantity=Quantity: 
 
 info.item.wrench.use=Use on vehicle to change instruments.
 info.item.wrench.attack=Attack a part to remove.
