Added analog brake controls to planes and cars.  Addresses #113.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -55,6 +55,7 @@ input.aircraft.throttle_d=ThrottleDown
 input.aircraft.flaps_u=FlapsUp
 input.aircraft.flaps_d=FlapsDown
 input.aircraft.brake=Brake
+input.aircraft.brake_analog=Brake
 input.aircraft.panel=Panel
 input.aircraft.park=ParkingBrake
 input.aircraft.gun=Gun
@@ -82,6 +83,7 @@ input.car.turn_r=TurnRight
 input.car.turn_l=TurnLeft
 input.car.gas=Gas
 input.car.brake=Brake
+input.car.brake_analog=Brake
 input.car.shift_u=ShiftUp
 input.car.shift_d=ShiftDown
 input.car.start=StartEngine
